--- a/pom.xml
+++ b/pom.xml
@@ -8,13 +8,13 @@
         <version>3.1.4</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
-    <groupId>com.example</groupId>
-    <artifactId>demo</artifactId>
+    <groupId>org.rmm</groupId>
+    <artifactId>RMM</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>demo</name>
+    <name>RMM</name>
     <description>Demo project for Spring Boot</description>
     <properties>
-        <java.version>1.8</java.version>
+        <java.version>17</java.version>
         <openapi.version>2.0.2</openapi.version>
     </properties>
     <dependencies>
